2009-03-12  Adam Treat  <adam.treat@torchmobile.com>

Reviewed by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=24498
        Fix the Qt port to use the same algorithm for drawing dashed and dotted
        borders as the other ports.  This makes the Qt port pixel-for-pixel perfect
        compared to border drawing with Apple's canonical mac port and much closer
        to konqueror and firefox behavior.

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::drawLine):

Canonical link: https://commits.webkit.org/33718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41659 268f45cc-cd09-0410-ab3c-d52691b4dbfc